--- a/pms/views/pms_board_service_views.xml
+++ b/pms/views/pms_board_service_views.xml
@@ -18,6 +18,7 @@
                         <tree editable="bottom">
                             <field name="product_id" />
                             <field name="amount" />
+                            <field name="pms_property_ids" invisible="1" />
                         </tree>
                     </field>
                     <field name="show_detail_report" />
@@ -34,6 +35,7 @@
                 <field name="default_code" />
                 <field name="amount" />
                 <field name="show_detail_report" />
+                <field name="pms_property_ids" invisible="1" />
             </tree>
         </field>
     </record>
