--- a/pms/views/folio_portal_templates.xml
+++ b/pms/views/folio_portal_templates.xml
@@ -63,6 +63,10 @@
                                 >
                                 <t t-esc="folio.name" />
                             </a>
+                            <a
+                                    t-att-href="folio.get_portal_url(bol=True)"
+                                    t-att-title="Precheckin"
+                                >Precheckin</a>
                         </td>
                         <td><span t-field="folio.date_order" /></td>
                         <td class="text-right"><span
@@ -475,5 +479,65 @@
                 <span t-field="folio.fiscal_position_id.sudo().note" />
             </p>
         </div>
+    </template>
+    <template id="portal_my_folio_precheckin" name="Precheckin Folio">
+        <t t-call="portal.portal_layout">
+            <t t-set="breadcrumbs_searchbar" t-value="True" />
+
+            <t t-call="portal.portal_searchbar">
+                <t t-set="title">Precheckins</t>
+            </t>
+            <t t-if="not folio.reservation_ids">
+                <p>There are currently no reservations in this folio for your account.</p>
+            </t>
+            <t t-if="folio.reservation_ids" t-call="portal.portal_table">
+                <thead>
+                    <tr class="active">
+                        <th>PreCheckin in Folio <span t-field="folio.name" /></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <t t-foreach="folio.reservation_ids" t-as="reservation">
+                        <tr class="bg-light">
+                            <td colspan="4"><em class="font-weight-normal text-muted"><span
+                                        />Reservation: </em>
+                                <a
+                                        t-att-href="reservation.get_portal_url()"
+                                        t-att-title="reservation.name"
+                                    >
+                                    <t t-esc="reservation.name" />
+                                </a>
+                            </td>
+                        </tr>
+                        <t
+                                t-foreach="reservation.checkin_partner_ids"
+                                t-as="checkin_partner"
+                            >
+                            <tr>
+                                <td colspan="4">
+                                <a t-att-href="checkin_partner.get_portal_url()">
+                                        Checkin
+                                </a>
+                                    <div t-attf-class="form-group">
+                                            <div class="col-2">
+                                                <label
+                                                    class="col-form-label"
+                                                    for="name"
+                                                >Name: </label>
+                                                <input
+                                                    type="text"
+                                                    name="name"
+                                                    t-attf-class="form-control"
+                                                    t-att-value="name or checkin_partner.name"
+                                                />
+                                            </div>
+                                    </div>
+                                </td>
+                            </tr>
+                        </t>
+                    </t>
+                </tbody>
+            </t>
+      </t>
     </template>
 </odoo>
