--- a/pms/views/reservation_portal_templates.xml
+++ b/pms/views/reservation_portal_templates.xml
@@ -280,8 +280,175 @@
         </t>
     </template>
     <template id="portal_my_reservation_precheckin" name="Precheckin Reservation">
-        <div class="row mt16">
-            <p>Hola</p>
-        </div>
+        <t t-call="portal.portal_layout">
+            <t t-set="breadcrumbs_searchbar" t-value="True" />
+
+            <t t-call="portal.portal_searchbar">
+                <t t-set="title">Precheckins</t>
+            </t>
+            <t t-if="not reservation.checkin_partner_ids">
+                <p
+                >There are currently no precheckins in this reserva for your account.</p>
+            </t>
+            <t t-if="reservation.checkin_partner_ids" t-call="portal.portal_table">
+                <thead>
+                    <tr class="active">
+                        <th>PreCheckin in Reservation <span
+                                t-field="reservation.name"
+                            /></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <t
+                        t-foreach="reservation.checkin_partner_ids"
+                        t-as="checkin_partner"
+                    >
+                        <tr>
+                            <td colspan="4">
+                            <a t-att-href="checkin_partner.get_portal_url()">
+                                    Checkin
+                            </a>
+                                <div class="row o_portal_details">
+                                    <div class="col-lg-8">
+                                        <div class="row">
+                                            <div t-attf-class="form-group col-xl-6">
+                                                <label
+                                                    class="col-form-label"
+                                                    for="name"
+                                                >Name</label>
+                                                <input
+                                                    type="text"
+                                                    name="name"
+                                                    t-attf-class="form-control"
+                                                    t-att-value="name or checkin_partner.firstname"
+                                                />
+                                            </div>
+                                            <div t-attf-class="form-group col-xl-6">
+                                                <label
+                                                    class="col-form-label"
+                                                    for="name"
+                                                >Lastname</label>
+                                                <input
+                                                    type="text"
+                                                    name="lastname"
+                                                    t-attf-class="form-control"
+                                                    t-att-value="lastname or checkin_partner.lastname"
+                                                />
+                                            </div>
+                                            <div t-attf-class="form-group col-xl-6">
+                                                <label
+                                                    class="col-form-label"
+                                                    for="name"
+                                                > Second Lastname</label>
+                                                <input
+                                                    type="text"
+                                                    name="second_lastname"
+                                                    t-attf-class="form-control"
+                                                    t-att-value="lastname2 or checkin_partner.lastname2"
+                                                />
+                                            </div>
+                                            <div t-attf-class="form-group col-xl-6">
+                                                <label
+                                                    class="col-form-label"
+                                                    for="name"
+                                                > Birth Date</label>
+                                                <input
+                                                    type="text"
+                                                    name="birth_date"
+                                                    t-attf-class="form-control"
+                                                    t-att-value="birth_date or checkin_partner.birthdate_date"
+                                                />
+                                            </div>
+                                            <div t-attf-class="form-group col-xl-6">
+                                                <label
+                                                    class="col-form-label"
+                                                    for="name"
+                                                >Gender</label>
+                                                <input
+                                                    type="text"
+                                                    name="gender"
+                                                    t-attf-class="form-control"
+                                                    t-att-value="gender or checkin_partner.gender"
+                                                />
+                                            </div>
+                                            <div t-attf-class="form-group col-xl-6">
+                                                <label
+                                                    class="col-form-label"
+                                                    for="name"
+                                                >Doc. type</label>
+                                                <input
+                                                    type="text"
+                                                    name="doc_type"
+                                                    t-attf-class="form-control"
+                                                    t-att-value="doc_type or checkin_partner.document_type"
+                                                />
+                                            </div>
+                                            <div t-attf-class="form-group col-xl-6">
+                                                <label
+                                                    class="col-form-label"
+                                                    for="name"
+                                                >Doc. number</label>
+                                                <input
+                                                    type="text"
+                                                    name="doc_number"
+                                                    t-attf-class="form-control"
+                                                    t-att-value="doc_number or checkin_partner.document_number"
+                                                />
+                                            </div>
+                                            <div t-attf-class="form-group col-xl-6">
+                                                <label
+                                                    class="col-form-label"
+                                                    for="name"
+                                                >Doc. expedition date</label>
+                                                <input
+                                                    type="text"
+                                                    name="doc_exp_date"
+                                                    t-attf-class="form-control"
+                                                    t-att-value="doc_exp_date or checkin_partner.document_expedition_date"
+                                                />
+                                            </div>
+                                            <div t-attf-class="form-group col-xl-6">
+                                                <label
+                                                    class="col-form-label"
+                                                    for="name"
+                                                >Mobile</label>
+                                                <input
+                                                    type="text"
+                                                    name="mobile"
+                                                    t-attf-class="form-control"
+                                                    t-att-value="mobile or checkin_partner.mobile"
+                                                />
+                                            </div>
+                                            <div t-attf-class="form-group col-xl-6">
+                                                <label
+                                                    class="col-form-label"
+                                                    for="name"
+                                                >Email</label>
+                                                <input
+                                                    type="text"
+                                                    name="email"
+                                                    t-attf-class="form-control"
+                                                    t-att-value="email or checkin_partner.email"
+                                                />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                    </t>
+                    <tr>
+                        <td>
+                            <button
+                                type="submit"
+                                class="btn btn-primary float-right mb32 "
+                            >
+                                Confirm<span class="fa fa-long-arrow-right" />
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+            </t>
+      </t>
     </template>
 </odoo>
